[gd_scene load_steps=7 format=3 uid="uid://jkjt5tbai10j"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_0b8yu"]
[ext_resource type="PackedScene" uid="uid://bv7jahf4uj8v0" path="res://Scenes/Maps/Debug/debug.tscn" id="1_ighmg"]
[ext_resource type="Script" path="res://Scripts/UI/ui.gd" id="3_dtuef"]
[ext_resource type="Script" path="res://Scripts/UI/score.gd" id="3_nnnuy"]
[ext_resource type="Script" path="res://Scripts/Debug/debug_version.gd" id="5_3c3ax"]
[ext_resource type="Script" path="res://Scripts/UI/timer.gd" id="6_6ntbc"]

[node name="Game" type="Node2D"]
script = ExtResource("1_0b8yu")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
texture_filter = 1
offset_right = 1920.0
offset_bottom = 1080.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Debug" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_ighmg")]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("3_dtuef")

[node name="OWElements" type="Control" parent="UI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreElements" type="Control" parent="UI/OWElements"]
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("3_nnnuy")

[node name="Score" type="Label" parent="UI/OWElements/ScoreElements"]
layout_mode = 1
offset_left = 5.0
offset_right = 130.0
offset_bottom = 23.0
text = "Pollution Score :"

[node name="Grade" type="Label" parent="UI/OWElements/ScoreElements"]
layout_mode = 1
offset_left = 300.0
offset_right = 340.0
offset_bottom = 23.0
text = "C"
horizontal_alignment = 1

[node name="TimerElements" type="Control" parent="UI/OWElements"]
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("6_6ntbc")
minute = 10
seconde = 20

[node name="Time" type="Label" parent="UI/OWElements/TimerElements"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -86.0
offset_right = -5.0
offset_bottom = 23.0
grow_horizontal = 0
text = "00 : 00 : 00"

[node name="DebugElements" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("5_3c3ax")

[node name="Versioning" type="Button" parent="UI/DebugElements"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -40.0
offset_right = -11.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0

[node name="LineEdit" type="LineEdit" parent="UI/DebugElements"]
layout_mode = 1
offset_left = 5.0
offset_top = 28.0
offset_right = 130.0
offset_bottom = 59.0
placeholder_text = "Modifier Score"
clear_button_enabled = true

[node name="RespawnDebug" type="OptionButton" parent="UI/DebugElements"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = -41.0
offset_right = 276.0
offset_bottom = -10.0
grow_vertical = 0
focus_mode = 0
clip_text = true
allow_reselect = true
item_count = 2
popup/item_0/text = "Spawn n° 0"
popup/item_1/text = "Spawn n° 1"
popup/item_1/id = 1

[node name="MapDebug" type="OptionButton" parent="UI/DebugElements"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -41.0
offset_right = 138.0
offset_bottom = -10.0
grow_vertical = 0
focus_mode = 0
clip_text = true
allow_reselect = true
item_count = 2
popup/item_0/text = "Debug"
popup/item_1/text = "Debug2"
popup/item_1/id = 1

[connection signal="pressed" from="UI/DebugElements/Versioning" to="UI/DebugElements" method="_on_button_pressed"]
[connection signal="text_submitted" from="UI/DebugElements/LineEdit" to="UI/DebugElements" method="_on_line_edit_text_submitted"]
[connection signal="item_selected" from="UI/DebugElements/RespawnDebug" to="UI/DebugElements" method="_on_respawn_debug_item_selected"]
[connection signal="item_selected" from="UI/DebugElements/MapDebug" to="UI/DebugElements" method="_on_option_button_item_selected"]
